--- a/en/exhibition.html
+++ b/en/exhibition.html
@@ -18,6 +18,9 @@
   <meta name="description" content="Traffic Solutions Expo, Novi Sad Fair, City of Novi Sad, Serbia">
   <meta name="author" content="ASajfar">
 
+   <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+  <link href="/android-192x192.png" rel="icon" sizes="192x192" />
+
   <!-- Bootstrap CSS  -->
   <link rel="stylesheet" href="asset/css/bootstrap.min.css" type="text/css" media="screen">
 
@@ -105,7 +108,7 @@
             <div class="col-md-5">
               <!-- Start Social Links -->
               <ul class="social-list">
-                <!--<li>
+                <li>
                   <a class="facebook itl-tooltip" data-placement="bottom" title="Facebook" href="#"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
@@ -114,7 +117,7 @@
                 <li>
                   <a class="google itl-tooltip" data-placement="bottom" title="Google Plus" href="#"><i class="fa fa-google-plus"></i></a>
                 </li>
-                
+                <!--
                 <li>
                   <a class="dribbble itl-tooltip" data-placement="bottom" title="Dribble" href="#"><i class="fa fa-dribbble"></i></a>
                 </li>
@@ -132,15 +135,15 @@
                 </li>
                 <li>
                   <a class="vimeo itl-tooltip" data-placement="bottom" title="vimeo" href="#"><i class="fa fa-vimeo-square"></i></a>
-                </li>
+                </li>-->
                 <li>
                   <a class="skype itl-tooltip" data-placement="bottom" title="Skype" href="callto://+***********"><i class="fa fa-skype"></i></a>
-                </li>-->
+                </li>
                 <li>
                   <a class="language-choose active" href="#"><i>EN</i></a>
                 </li>
                 <li>
-                  <a class="language-choose" href="#"><i>SR</i></a>
+                  <a class="language-choose" href="../sr/izlozba.html"><i>SR</i></a>
                 </li>
               </ul>
               <!-- End Social Links -->
@@ -165,8 +168,7 @@
             </button>
             <!-- End Toggle Nav Link For Mobiles -->
             <a class="navbar-brand" href="index.html">
-              <img alt="" src="images/tslogo.png" class="logo-full">
-              <img alt="" src="images/tslogo2.png" class="logo-mobile">
+              <img alt="" src="images/tslogo.png">
             </a>
           </div>
           <div class="navbar-collapse collapse">
@@ -186,7 +188,7 @@
                 <a href="index.html">Home</a>
               </li>
               <li>
-                <a class="active" href="programme.html">Programme</a>
+                <a class="active" href="exhibition.html">Exhibition</a>
               </li>
               <li>
                 <a href="location.html">Location & Contact</a>
@@ -202,7 +204,7 @@
             <a href="index.html">Home</a>
           </li>
           <li>
-            <a class="active" href="programme.html">Programme</a>
+            <a class="active" href="exhibition.html">Exhibition</a>
           </li>
           <li>
             <a href="location.html">Location & Contact</a>
@@ -223,13 +225,13 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h2>Programme</h2>
+            <h2>Exhibition</h2>
             <p>Traffic Solutions Expo</p>
           </div>
           <div class="col-md-6">
             <ul class="breadcrumbs">
               <li><a href="index.html">Home</a></li>
-              <li>Programme</li>
+              <li>Exhibition</li>
             </ul>
           </div>
         </div>
@@ -249,11 +251,28 @@
             <div class="col-md-7">
 
               <!-- Classic Heading -->
-              <h4 class="classic-title"><span>Programme</span></h4>
+              <h4 class="classic-title"><span>Exhibition</span></h4>
 
               <!-- Some Text -->
-              <p>Lorem Ipsum is simply dummy text of the <a title="Simple Tooltip" href="#" class="itl-tooltip" data-placement="top">printing</a> and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-              <p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Sed ut perspiciatis unde omnis iste natus error sit volup accusantium. Lorem ipsum dolor sit amet, consectetur.</p>
+              <p>Traffic Solutions EXPO 2016 is the first international fair of this kind in the Western Balkans and a unique business platform with special importance for Serbia and the entire region.</p>
+              <p>Decades of regional political instability and lack of investment in the development of traffic and traffic infrastructure have left numerous consequences that have affected the economy, security, traffic participants but also in general  the quality of people's lives.</p>
+              <p>Today, the Republic of Serbia, and other countries of the Western Balkans as a kind of crossroads in this part of Europe, represent a promising market that is facing major challenges in terms of accelerated development of traffic infrastructure, the growing demand for mobility and strong links between different traffic types.</p>
+              <p>Aiming to contribute to general development , the focus of Traffic Solutions EXPO would be on the following specific areas:</p>
+              <ul class="icons-list">
+                <li><i class="fa fa-check-circle"></i>Traffic systems</li>
+                <li><i class="fa fa-check-circle"></i>Traffic Design</li>
+                <li><i class="fa fa-check-circle"></i>Traffic infrastructure</li>
+                <li><i class="fa fa-check-circle"></i>Mechanization and equipment</li>
+                <li><i class="fa fa-check-circle"></i>Traffic Planning and Traffic Management</li>
+                <li><i class="fa fa-check-circle"></i>Traffic Safety</li>
+                <li><i class="fa fa-check-circle"></i>Traffic signalization and equipment</li>
+                <li><i class="fa fa-check-circle"></i>Transport and Logistics</li>
+                <li><i class="fa fa-check-circle"></i>Urban Public Transport</li>
+                <li><i class="fa fa-check-circle"></i>Urban Mobility</li>
+                <li><i class="fa fa-check-circle"></i>Intelligent Trasportations Systems (ITS)</li>
+                <li><i class="fa fa-check-circle"></i>Accessibility</li>
+                <li><i class="fa fa-check-circle"></i>Traffic investments</li>
+              </ul>
 
             </div>
 
@@ -269,6 +288,15 @@
 
             </div>
 
+          </div>
+
+          <div class="row poziv">
+            <div class="call-action call-action-boxed call-action-style1 no-descripton clearfix">
+              <!-- Call Action Button -->
+              <!--<div class="button-side"><a href="#" class="btn-system border-btn btn-medium">Purchase It Now</a></div>-->
+              <!-- Call Action Text -->
+              <h2 class="primary"><strong>JOIN</strong> the challenges and be part of positive changes!</h2>
+            </div>
           </div>
 
           <!-- Divider -->
@@ -288,29 +316,27 @@
           <div class="col-md-6">
             <div class="footer-widget mail-subscribe-widget">
               <h4>Get in touch<span class="head-line"></span></h4>
-              <p>Join our mailing list and be informed!</p>
-              <form class="subscribe" action="http://adomne.us9.list-manage.com/subscribe/post" method="POST">
-                <input type="hidden" name="u" value="463fc7d46e4f471e9f5d8312a">
-                <input type="hidden" name="id" value="511d158f34">
-                <input type="email" autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" placeholder="mail@example.com">
-                <input type="submit" class="btn-system" name="submit" value="Send">
+              <p>Join our mailing list to stay up to date and get notices about our new releases!</p>
+              <form class="subscribe">
+                <input type="text" placeholder="mail@example.com">
+                <input type="submit" class="btn-system" value="Send">
               </form>
             </div>
             <div class="footer-widget social-widget">
               <h4>Follow Us<span class="head-line"></span></h4>
               <ul class="social-icons">
                 <li>
-                  <a class="facebook" target="_blank" href="https://www.facebook.com/Traffic-Solutions-Expo-2017-327245394274282/"><i class="fa fa-facebook"></i></a>
+                  <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a class="twitter" href="https://twitter.com/ts_expo_ns" target="_blank"><i class="fa fa-twitter"></i></a>
+                  <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
                 </li>
-                <!-- <li>
+                <li>
                   <a class="google" href="#"><i class="fa fa-google-plus"></i></a>
                 </li>
                 <li>
                   <a class="skype" href="#"><i class="fa fa-skype"></i></a>
-                </li> -->
+                </li>
               </ul>
             </div>
           </div>
@@ -322,9 +348,9 @@
           <div class="col-md-6">
             <div class="footer-widget contact-widget">
               <h4><img src="images/tslogo_w.png" class="img-responsive" alt="Footer Logo" /></h4>
-              <p>Contact us:</p>
+              <p>Something about contact or anything else, omething about contact or anything else, omething about contact or anything else, omething about contact or anything else.</p>
               <ul>
-                <li><span>Phone Number:</span> +381 (0) 64 12 49 757; +381 (0) 63 417 555</li>
+                <li><span>Phone Number:</span> +381 (0) 64 12 49 757</li>
                 <li><span>Email:</span> office@ts-expo.rs</li>
                 <li><span>Website:</span> www.ts-expo.rs</li>
               </ul>
@@ -341,13 +367,13 @@
         <div class="copyright-section">
           <div class="row">
             <div class="col-md-6">
-              <p>&copy; 2017 ts-expo.rs - All Rights Reserved</p>
+              <p>&copy; 2016 ts-expo.rs - All Rights Reserved</p>
             </div>
             <div class="col-md-6">
               <ul class="footer-nav">
                 <li><a href="#">Sitemap</a></li>
                 <li><a href="#">Privacy Policy</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="location.html">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -466,18 +492,6 @@
   </div>-->
 
   <script type="text/javascript" src="js/script.js"></script>
-
-  <!-- Google Analytics Code -->
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-76465485-1', 'auto');
-  ga('send', 'pageview');
-
-  </script>
 
 </body>
 
