--- a/en/exhibitors-terms.html
+++ b/en/exhibitors-terms.html
@@ -299,21 +299,21 @@
                 <div class="db-wrapper">
                     <div class="db-pricing-seven">
                         <ul>
-                            <li class="price">These prices are valid <span style="color:#000; font-weight:500;">until September 1st, 2016</span></li>
+                            <li class="price">These prices are valid <span style="color:#000; font-weight:500;">until August 1st, 2017</span></li>
 
                             <li class="price_header">TYPE<br>OF SERVICE:</li>
                             <li class="price_header kolona">PRICES IN EUR*</li>
-                            <li>Space without stand construction /m²:</li>
+                            <li><span style="font-weight: bold">Space without stand construction</span> (Price is expressed per m²):</li>
                             <li class="kolona">25</li>
-                            <li>Decoration and construction /m²:</li>
-                            <li class="kolona">40</li>
-                            <li>Graphics on construction /m²:</li>
-                            <li class="kolona">15</li>
-                            <li>Electric receptacle of up 15 kW and electricity consumption:</li>
-                            <li class="kolona">25</li>
-                            <li>Counter with two chairs and electricity consumption:</li>
+                            <li><span style="font-weight: bold">Stand - Type I-52m²</span> (space, stand design, table with chairs, electricity, graphics and hostesses)</li>
+                            <li class="kolona" style="line-height: 3em;">3750</li>
+                            <li><span style="font-weight: bold">Stand - Type II-24m²</span> (space, stand design, table with chairs, electricity, graphics and hostesses)</li>
+                            <li class="kolona" style="line-height: 3em;">1780</li>
+                            <li><span style="font-weight: bold">Stand - Type III-12m²</span> (space, stand design, table with chairs, electricity, graphics and hostesses)</li>
+                            <li class="kolona" style="line-height: 3em;">1000</li>
+                            <li><span style="font-weight: bold">Counter</span> (two chairs and electricity consumption)</li>
                             <li class="kolona">250</li>
-                            <li>Rental of the conference room for a presentation, 100 seats/1h:</li>
+                            <li><span style="font-weight: bold">Conference room</span> (Price is expressed per 100 seats /1h):</li>
                             <li class="kolona">140</li>
                         </ul>
                         <!-- <div class="pricing-footer">
@@ -322,7 +322,7 @@
                     </div>
                     <div class="table_reg"><a href="docs/reg/Registration_form.pdf" target="_blank"><button class="register-button-izv"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> REGISTRATION FORM</button></a></div>
                     <div class="pricing-footer">
-                      * For exhibitors from the Republic of Serbia price is expressed in dinars at the exchange rate of the National Bank of Serbia on the payment date.
+                      * All prices are expressed without VAT, which will be calculated in accordance with the applicable legal regulations at the time of execution of services. VAT is at buyer's expense. For exhibitors from the Republic of Serbia, the price is expressed in RSD counter value at the NBS exchange rate on the day of payment.
                     </div>
                 </div>
               </div>  
@@ -334,22 +334,22 @@
                 <div class="db-wrapper">
                     <div class="db-pricing-seven">
                         <ul>
-                            <li class="price">These prices are valid <span style="color:#000; font-weight:500;">until October 1st, 2016</span></li>
+                            <li class="price">These prices are valid <span style="color:#000; font-weight:500;">until October 20th, 2017</span></li>
 
                             <li class="price_header">TYPE<br>OF SERVICE:</li>
                             <li class="price_header kolona">PRICES IN EUR*</li>
-                            <li>Space without stand construction /m²:</li>
-                            <li class="kolona">30</li>
-                            <li>Decoration and construction /m²:</li>
-                            <li class="kolona">45</li>
-                            <li>Graphics on construction /m²:</li>
-                            <li class="kolona">15</li>
-                            <li>Electric receptacle of up 15 kW and electricity consumption:</li>
+                            <li><span style="font-weight: bold">Space without stand construction</span> (Price is expressed per m²):</li>
                             <li class="kolona">25</li>
-                            <li>Counter with two chairs and electricity consumption:</li>
-                            <li class="kolona">300</li>
-                            <li>Rental of the conference room for a presentation, 100 seats/1h:</li>
-                            <li class="kolona">150</li>
+                            <li><span style="font-weight: bold">Stand - Type I-52m²</span> (space, stand design, table with chairs, electricity, graphics and hostesses)</li>
+                            <li class="kolona" style="line-height: 3em;">4315</li>
+                            <li><span style="font-weight: bold">Stand - Type II-24m²</span> (space, stand design, table with chairs, electricity, graphics and hostesses)</li>
+                            <li class="kolona" style="line-height: 3em;">2050</li>
+                            <li><span style="font-weight: bold">Stand - Type III-12m²</span> (space, stand design, table with chairs, electricity, graphics and hostesses)</li>
+                            <li class="kolona" style="line-height: 3em;">1150</li>
+                            <li><span style="font-weight: bold">Counter</span> (two chairs and electricity consumption)</li>
+                            <li class="kolona">290</li>
+                            <li><span style="font-weight: bold">Conference room</span> (Price is expressed per 100 seats /1h):</li>
+                            <li class="kolona">160</li>
                         </ul>
                         <!-- <div class="pricing-footer">
                           * Za izlagače iz R.Srbije cena se iskazuje u dinarskoj protivvrednosti po kursu NBS na dan uplate.
@@ -357,7 +357,7 @@
                     </div>
                     <div class="table_reg"><a href="docs/reg/Registration_form.pdf" target="_blank"><button class="register-button-izv"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> REGISTRATION FORM</button></a></div>
                     <div class="pricing-footer">
-                      * For exhibitors from the Republic of Serbia price is expressed in dinars at the exchange rate of the National Bank of Serbia on the payment date.
+                      * All prices are expressed without VAT, which will be calculated in accordance with the applicable legal regulations at the time of execution of services. VAT is at buyer's expense. For exhibitors from the Republic of Serbia, the price is expressed in RSD counter value at the NBS exchange rate on the day of payment.
                     </div>
                 </div>
               </div>  
@@ -443,17 +443,17 @@
               <h4>Follow Us<span class="head-line"></span></h4>
               <ul class="social-icons">
                 <li>
-                  <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+                  <a class="facebook" target="_blank" href="https://www.facebook.com/Traffic-Solutions-Expo-2017-327245394274282/"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+                  <a class="twitter" href="https://twitter.com/ts_expo_ns" target="_blank"><i class="fa fa-twitter"></i></a>
                 </li>
-                <li>
+                <!-- <li>
                   <a class="google" href="#"><i class="fa fa-google-plus"></i></a>
                 </li>
                 <li>
                   <a class="skype" href="#"><i class="fa fa-skype"></i></a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
@@ -467,7 +467,7 @@
               <h4><img src="images/tslogo_w.png" class="img-responsive" alt="Footer Logo" /></h4>
               <p>Contact us:</p>
               <ul>
-                <li><span>Phone Number:</span> +381 (0) 64 12 49 757</li>
+                <li><span>Phone Number:</span> +381 (0) 64 12 49 757; +381 (0) 63 417 555</li>
                 <li><span>Email:</span> office@ts-expo.rs</li>
                 <li><span>Website:</span> www.ts-expo.rs</li>
               </ul>
@@ -484,7 +484,7 @@
         <div class="copyright-section">
           <div class="row">
             <div class="col-md-6">
-              <p>&copy; 2016 ts-expo.rs - All Rights Reserved</p>
+              <p>&copy; 2017 ts-expo.rs - All Rights Reserved</p>
             </div>
             <div class="col-md-6">
               <ul class="footer-nav">
