--- a/en/visitors.html
+++ b/en/visitors.html
@@ -326,7 +326,7 @@
               <!-- Call Action Button -->
               <!--<div class="button-side"><a href="#" class="btn-system border-btn btn-medium">Purchase It Now</a></div>-->
               <!-- Call Action Text -->
-              <h2 class="primary">Entrance to TRAFFIC SOLUTIONS EXPO 2016 is free for all visitors, with obligatory registration, without which will not be possible to enter the fair.</h2>
+              <h2 class="primary">Entrance to TRAFFIC SOLUTIONS EXPO 2017 is free for all visitors, with obligatory registration, without which will not be possible to enter the fair.</h2>
               <button class="register-button-pos" data-toggle="modal" data-target="#myModalHorizontal">APPLICATION FORM</button>
             </div>
           </div>
@@ -360,17 +360,17 @@
               <h4>Follow Us<span class="head-line"></span></h4>
               <ul class="social-icons">
                 <li>
-                  <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+                  <a class="facebook" target="_blank" href="https://www.facebook.com/Traffic-Solutions-Expo-2017-327245394274282/"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+                  <a class="twitter" href="https://twitter.com/ts_expo_ns" target="_blank"><i class="fa fa-twitter"></i></a>
                 </li>
-                <li>
+                <!-- <li>
                   <a class="google" href="#"><i class="fa fa-google-plus"></i></a>
                 </li>
                 <li>
                   <a class="skype" href="#"><i class="fa fa-skype"></i></a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
@@ -384,7 +384,7 @@
               <h4><img src="images/tslogo_w.png" class="img-responsive" alt="Footer Logo" /></h4>
               <p>Contact us:</p>
               <ul>
-                <li><span>Phone Number:</span> +381 (0) 64 12 49 757</li>
+                <li><span>Phone Number:</span> +381 (0) 64 12 49 757; +381 (0) 63 417 555</li>
                 <li><span>Email:</span> office@ts-expo.rs</li>
                 <li><span>Website:</span> www.ts-expo.rs</li>
               </ul>
@@ -401,7 +401,7 @@
         <div class="copyright-section">
           <div class="row">
             <div class="col-md-6">
-              <p>&copy; 2016 ts-expo.rs - All Rights Reserved</p>
+              <p>&copy; 2017 ts-expo.rs - All Rights Reserved</p>
             </div>
             <div class="col-md-6">
               <ul class="footer-nav">
